# quickfind_program

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  main.cpp  quickfind.cpp  quickfind.h
